--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   </div>
             </li>
             <li class="mainIcon" class="topHeader">
-                <a id="anchorIcon" href="./indexOne.html" target="_blank">
+                <a id="anchorIcon" href="./index.html">
                     <img class="barIcons" src="./images/imarketOfficial.png">
                 </a>
             </li>
