--- a/indexThree.html
+++ b/indexThree.html
@@ -29,7 +29,7 @@
                   </div>
             </li>
             <li class="mainIcon" class="topHeader">
-                <a id="anchorIcon" href="./indexOne.html" target="_blank">
+                <a id="anchorIcon" href="./index.html" target="_blank">
                     <img class="barIcons" src="./images/imarketOfficial.png">
                 </a>
             </li>
@@ -167,7 +167,7 @@
             <input type="submit" id="submitPurchase" value="Procesar Orden">
         </div> -->
         </form> 
-        <a id="submitPurchase" href="./indexOne.html">
+        <a id="submitPurchase" href="./index.html">
             Procesar Orden
         </a>
     </div>
