--- a/indexTwo.html
+++ b/indexTwo.html
@@ -33,7 +33,7 @@
                   </div>
             </li>
             <li class="mainIcon" class="topHeader">
-                <a id="anchorIcon" href="./indexOne.html" target="_blank">
+                <a id="anchorIcon" href="./index.html" target="_blank">
                     <img class="barIcons" src="./images/imarketOfficial.png">
                 </a>
             </li>
